fixing social media images size on mobile

--- a/styles.css
+++ b/styles.css
@@ -1072,7 +1072,7 @@ input.submit:hover {
 @media screen and (max-width: 480px) {
     .socials img {
         height: 7vh;
-        width: 12vw;
+        width: 15vw;
     }
 }
 
